--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "preinstall": "npx typesync || :"
   },
   "dependencies": {
+    "graphql-request": "^5.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
+    "@types/eslint": "^8.4.10",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
