--- a/package.json
+++ b/package.json
@@ -2,22 +2,25 @@
   "name": "hello-world",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
-    "preinstall": "npx typesync || :"
+    "preinstall": "npx typesync || :",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.16.3",
+    "@graphql-codegen/client-preset": "^1.2.5",
     "@types/eslint": "^8.4.10",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -31,6 +34,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "ts-node": "^10.9.1",
     "typescript": "*",
     "vite": "^3.1.0"
   }
